Improve SCE-like method support

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -89,6 +89,7 @@ Collate:
     'AllClasses.R'
     'AllGenerics.R'
     'CellMarkers.R'
+    'Gene2Symbol-methods.R'
     'KnownMarkers-methods.R'
     'Seurat-SCE-methods.R'
     'SeuratMarkers.R'
@@ -98,6 +99,7 @@ Collate:
     'clusterCellCountsPerSample-methods.R'
     'clusters-methods.R'
     'coerce-methods.R'
+    'counts-methods.R'
     'data.R'
     'deprecated.R'
     'globals.R'
@@ -108,6 +110,7 @@ Collate:
     'findMarkers-methods.R'
     'imports.R'
     'metrics-methods.R'
+    'normalizedCounts-internal.R'
     'package.R'
     'params.R'
     'plotCellCountsPerCluster-methods.R'
