--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(CellCycleMarkers)
 export(CellTypeMarkers)
+export(Gene2Symbol)
 export(KnownMarkers)
 export(SeuratMarkers)
 export(SeuratMarkersPerCluster)
@@ -10,6 +11,7 @@ export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(clusterID)
 export(clusters)
+export(counts)
 export(diffExp)
 export(diffExpPerCluster)
 export(findMarkers)
@@ -17,7 +19,9 @@ export(importCellCycleMarkersFromGoogle)
 export(importCellTypeMarkersFromGoogle)
 export(knownMarkers)
 export(knownMarkersDetected)
+export(logcounts)
 export(metrics)
+export(normcounts)
 export(plotCellCountsPerCluster)
 export(plotCellTypesPerCluster)
 export(plotCounts)
@@ -60,18 +64,19 @@ exportMethods(clusterCellCountsPerSample)
 exportMethods(clusters)
 exportMethods(coerce)
 exportMethods(colData)
-exportMethods(colnames)
 exportMethods(counts)
 exportMethods(diffExp)
 exportMethods(diffExpPerCluster)
 exportMethods(estimateSizeFactors)
 exportMethods(findMarkers)
 exportMethods(interestingGroups)
+exportMethods(logcounts)
 exportMethods(mapGenesToIDs)
 exportMethods(mapGenesToRownames)
 exportMethods(mapGenesToSymbols)
 exportMethods(metadata)
 exportMethods(metrics)
+exportMethods(normcounts)
 exportMethods(plotCellCountsPerCluster)
 exportMethods(plotCellTypesPerCluster)
 exportMethods(plotCounts)
@@ -89,7 +94,6 @@ exportMethods(plotViolin)
 exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
-exportMethods(rownames)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
@@ -102,14 +106,12 @@ importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importClassesFrom(monocle3,cell_data_set)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,cbind)
-importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rowMeans)
 importFrom(BiocGenerics,rowSums)
-importFrom(BiocGenerics,rownames)
 importFrom(BiocGenerics,sapply)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
@@ -139,6 +141,9 @@ importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"weights<-")
+importFrom(SingleCellExperiment,counts)
+importFrom(SingleCellExperiment,logcounts)
+importFrom(SingleCellExperiment,normcounts)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SingleCellExperiment,weights)
