Rework count and size factor method support

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -89,17 +89,17 @@ Collate:
     'AllClasses.R'
     'AllGenerics.R'
     'CellMarkers.R'
-    'Gene2Symbol-methods.R'
     'KnownMarkers-methods.R'
     'Seurat-SCE-methods.R'
     'SeuratMarkers.R'
     'assert-internal.R'
+    'base-Gene2Symbol-methods.R'
+    'base-counts-methods.R'
     'cellCountsPerCluster-methods.R'
     'cellTypesPerCluster-methods.R'
     'clusterCellCountsPerSample-methods.R'
     'clusters-methods.R'
     'coerce-methods.R'
-    'counts-methods.R'
     'data.R'
     'deprecated.R'
     'globals.R'
