--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(clusters)
 export(counts)
 export(diffExp)
 export(diffExpPerCluster)
+export(estimateSizeFactors)
 export(findMarkers)
 export(importCellCycleMarkersFromGoogle)
 export(importCellTypeMarkersFromGoogle)
@@ -65,6 +66,7 @@ exportMethods(clusters)
 exportMethods(coerce)
 exportMethods(colData)
 exportMethods(counts)
+exportMethods(cpm)
 exportMethods(diffExp)
 exportMethods(diffExpPerCluster)
 exportMethods(estimateSizeFactors)
@@ -108,6 +110,7 @@ importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
+importFrom(BiocGenerics,estimateSizeFactors)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rowMeans)
@@ -142,6 +145,7 @@ importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"weights<-")
 importFrom(SingleCellExperiment,counts)
+importFrom(SingleCellExperiment,cpm)
 importFrom(SingleCellExperiment,logcounts)
 importFrom(SingleCellExperiment,normcounts)
 importFrom(SingleCellExperiment,reducedDimNames)
