--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,7 +123,11 @@ importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
 importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
+importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(DESeq2,results)
+importFrom(DelayedArray,DelayedArray)
+importFrom(DelayedMatrixStats,colSums2)
+importFrom(DelayedMatrixStats,rowSums2)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,as.data.frame)
@@ -170,6 +174,7 @@ importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,decode)
 importFrom(basejump,gene2symbol)
+importFrom(basejump,geometricMean)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,makeNames)
