--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ export(plotKnownMarkersDetected)
 export(plotMarker)
 export(plotPCA)
 export(plotPCElbow)
-export(plotReduction)
+export(plotReducedDim)
 export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
@@ -88,7 +88,7 @@ exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
 exportMethods(plotPCA)
 exportMethods(plotPCElbow)
-exportMethods(plotReduction)
+exportMethods(plotReducedDim)
 exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
 exportMethods(plotUMAP)
@@ -208,7 +208,7 @@ importFrom(bioverbs,plotFeature)
 importFrom(bioverbs,plotKnownMarkers)
 importFrom(bioverbs,plotMarker)
 importFrom(bioverbs,plotPCElbow)
-importFrom(bioverbs,plotReduction)
+importFrom(bioverbs,plotReducedDim)
 importFrom(bioverbs,plotTSNE)
 importFrom(bioverbs,plotTopMarkers)
 importFrom(bioverbs,plotUMAP)
