--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Imports:
     S4Vectors,
     SummarizedExperiment,
     edgeR (>= 3.24),
+    scater,
     Matrix (>= 1.2),
     Seurat (>= 3.0),
     cowplot (>= 0.9),
@@ -64,7 +65,6 @@ Imports:
 Suggests:
     acidtest (>= 0.2.2),
     BiocStyle,
-    scater,
     splatter,
     knitr,
     patrick,
@@ -116,6 +116,7 @@ Collate:
     'findMarkers-methods.R'
     'imports.R'
     'metrics-methods.R'
+    'normalize-methods.R'
     'package.R'
     'params.R'
     'plotCellCountsPerCluster-methods.R'
