--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
