Improve documentation consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(counts)
 export(cpm)
 export(diffExp)
 export(diffExpPerCluster)
-export(estimateSizeFactors)
 export(findMarkers)
 export(importCellCycleMarkersFromGoogle)
 export(importCellTypeMarkersFromGoogle)
@@ -73,7 +72,6 @@ exportMethods(counts)
 exportMethods(cpm)
 exportMethods(diffExp)
 exportMethods(diffExpPerCluster)
-exportMethods(estimateSizeFactors)
 exportMethods(findMarkers)
 exportMethods(interestingGroups)
 exportMethods(logcounts)
@@ -116,7 +114,6 @@ importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
-importFrom(BiocGenerics,estimateSizeFactors)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rowMeans)
@@ -159,14 +156,12 @@ importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
 importFrom(SingleCellExperiment,"sizeFactors<-")
-importFrom(SingleCellExperiment,"weights<-")
 importFrom(SingleCellExperiment,counts)
 importFrom(SingleCellExperiment,logcounts)
 importFrom(SingleCellExperiment,normcounts)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SingleCellExperiment,sizeFactors)
-importFrom(SingleCellExperiment,weights)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowRanges<-")
@@ -185,6 +180,7 @@ importFrom(basejump,camel)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,decode)
+importFrom(basejump,estimateSizeFactors)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,geometricMean)
 importFrom(basejump,import)
