--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,8 @@ exportMethods("sampleData<-")
 exportMethods("sizeFactors<-")
 exportMethods(Gene2Symbol)
 exportMethods(KnownMarkers)
+exportMethods(SeuratMarkers)
+exportMethods(SeuratMarkersPerCluster)
 exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
