Break out into separate files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -120,12 +120,14 @@ Collate:
     'plotCellCountsPerCluster-methods.R'
     'plotCellTypesPerCluster-methods.R'
     'plotCounts-methods.R'
+    'plotDot-methods.R'
     'plotFeature-methods.R'
     'plotKnownMarkers-methods.R'
     'plotMarker-methods.R'
     'plotPCElbow-methods.R'
     'plotReducedDim-methods.R'
     'plotTopMarkers-methods.R'
+    'plotViolin-methods.R'
     'show-methods.R'
     'sizeFactors-methods.R'
     'summary-methods.R'
