Add reducedDim support for Seurat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
 exportMethods(plotUMAP)
 exportMethods(plotViolin)
+exportMethods(reducedDim)
 exportMethods(reducedDimNames)
 exportMethods(reducedDims)
 exportMethods(rowData)
