Improve reducedDim assay handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -279,12 +279,15 @@ importFrom(goalie,allArePositive)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areIntersectingSets)
 importFrom(goalie,assert)
+importFrom(goalie,bapply)
 importFrom(goalie,false)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
 importFrom(goalie,hasRownames)
 importFrom(goalie,hasRows)
+importFrom(goalie,hasValidDimnames)
+importFrom(goalie,hasValidNames)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
