--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,14 +98,16 @@ Collate:
     'assert-internal.R'
     'base-Gene2Symbol-methods.R'
     'base-Seurat-SCE-methods.R'
-    'base-cpm-methods.R'
     'base-logcounts-methods.R'
+    'base-metrics-methods.R'
     'base-normcounts-methods.R'
+    'base-sizeFactors-methods.R'
     'cellCountsPerCluster-methods.R'
     'cellTypesPerCluster-methods.R'
     'clusterCellCountsPerSample-methods.R'
     'clusters-methods.R'
     'coerce-methods.R'
+    'cpm-methods.R'
     'data.R'
     'deprecated.R'
     'globals.R'
@@ -114,7 +116,6 @@ Collate:
     'fetchData-internal.R'
     'findMarkers-methods.R'
     'imports.R'
-    'metrics-methods.R'
     'normalize-methods.R'
     'package.R'
     'plotCellCountsPerCluster-methods.R'
@@ -129,6 +130,5 @@ Collate:
     'plotTopMarkers-methods.R'
     'plotViolin-methods.R'
     'show-methods.R'
-    'sizeFactors-methods.R'
     'summary-methods.R'
     'topMarkers-methods.R'
