--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,9 +157,11 @@ importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
+importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SingleCellExperiment,"sizeFactors<-")
 importFrom(SingleCellExperiment,logcounts)
 importFrom(SingleCellExperiment,normcounts)
+importFrom(SingleCellExperiment,reducedDim)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SingleCellExperiment,sizeFactors)
