Switch to using generic from BiocGenerics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,lapply)
+importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rowMeans)
 importFrom(BiocGenerics,rowSums)
