Add organism method support for Seurat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ exportClasses(SeuratMarkersPerCluster)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
+exportMethods("organism<-")
 exportMethods("rowRanges<-")
 exportMethods("sampleData<-")
 exportMethods("sizeFactors<-")
@@ -83,6 +84,7 @@ exportMethods(metadata)
 exportMethods(metrics)
 exportMethods(normalize)
 exportMethods(normcounts)
+exportMethods(organism)
 exportMethods(plotCellCountsPerCluster)
 exportMethods(plotCellTypesPerCluster)
 exportMethods(plotCounts)
@@ -137,6 +139,7 @@ importFrom(DelayedMatrixStats,colSums2)
 importFrom(DelayedMatrixStats,rowSums2)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,as.matrix)
 importFrom(S4Vectors,complete.cases)
@@ -166,6 +169,7 @@ importFrom(SingleCellExperiment,reducedDim)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SingleCellExperiment,sizeFactors)
+importFrom(SingleCellExperiment,spikeNames)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowRanges<-")
@@ -178,6 +182,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(acidplots,acid_theme_dark)
 importFrom(acidplots,acid_theme_light)
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,camel)
@@ -197,6 +202,7 @@ importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
+importFrom(basejump,organism)
 importFrom(basejump,printString)
 importFrom(basejump,reducedDims)
 importFrom(basejump,sampleData)
@@ -312,6 +318,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(methods,"slot<-")
+importFrom(methods,.hasSlot)
 importFrom(methods,as)
 importFrom(methods,coerce)
 importFrom(methods,getMethod)
