--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,16 +94,10 @@ Collate:
     'AllClasses.R'
     'AllGenerics.R'
     'AllGenerators.R'
-    'KnownMarkers-methods.R'
     'Seurat-internal.R'
-    'SeuratMarkers-methods.R'
     'assert-internal.R'
-    'base-Gene2Symbol-methods.R'
-    'base-Seurat-SCE-methods.R'
-    'base-logcounts-methods.R'
-    'base-metrics-methods.R'
-    'base-normcounts-methods.R'
-    'base-sizeFactors-methods.R'
+    'base-Seurat-methods.R'
+    'base-cell_data_set-methods.R'
     'cellCountsPerCluster-methods.R'
     'cellTypesPerCluster-methods.R'
     'clusterCellCountsPerSample-methods.R'
