--- a/NAMESPACE
+++ b/NAMESPACE
@@ -343,6 +343,7 @@ importFrom(stats,relevel)
 importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,remove_rownames)
+importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(utils,capture.output)
