--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.4.1
-Date: 2019-08-12
+Version: 0.4.2
+Date: 2019-08-21
 Authors@R: c(
     person(
         given = "Michael",
@@ -30,13 +30,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
 Depends:
-    R (>= 3.5),
-    SingleCellExperiment (>= 1.4),
-    basejump (>= 0.11.7)
+    R (>= 3.6),
+    SingleCellExperiment,
+    basejump (>= 0.11.9)
 Imports:
-    acidplots (>= 0.2.11),
+    acidplots (>= 0.2.13),
     bioverbs (>= 0.2.5),
-    goalie (>= 0.3.4),
+    goalie (>= 0.3.5),
     monocle3 (>= 0.1.3),
     BiocGenerics,
     BiocParallel,
@@ -48,7 +48,7 @@ Imports:
     edgeR (>= 3.24),
     scater,
     Matrix (>= 1.2),
-    Seurat (>= 3.0.2),
+    Seurat (>= 3.1),
     cowplot (>= 0.9),
     dplyr (>= 0.8),
     ggplot2 (>= 3.1),
@@ -64,7 +64,7 @@ Imports:
     utils
 Suggests:
     acidroxygen (>= 0.1),
-    acidtest (>= 0.2.2),
+    acidtest (>= 0.2.4),
     BiocStyle,
     splatter,
     knitr,
