--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,6 +94,7 @@ Collate:
     'AllClasses.R'
     'AllGenerics.R'
     'AllGenerators.R'
+    'AllGlobals.R'
     'Seurat-internal.R'
     'assert-internal.R'
     'base-Seurat-methods.R'
@@ -106,7 +107,6 @@ Collate:
     'cpm-methods.R'
     'data.R'
     'deprecated.R'
-    'globals.R'
     'diffExp-methods.R'
     'diffExpPerCluster-methods.R'
     'fetchData-internal.R'
