Switch to using "camelCase" and "snakeCase" spelled out, instead of the short variants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,7 +181,7 @@ importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
-importFrom(basejump,camel)
+importFrom(basejump,camelCase)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,decode)
@@ -204,7 +204,7 @@ importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,separator)
 importFrom(basejump,showSlotInfo)
-importFrom(basejump,snake)
+importFrom(basejump,snakeCase)
 importFrom(basejump,upperCamel)
 importFrom(bioverbs,cellCountsPerCluster)
 importFrom(bioverbs,cellTypesPerCluster)
