--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,15 +109,9 @@ importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importClassesFrom(monocle3,cell_data_set)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,"sizeFactors<-")
-importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,counts)
-importFrom(BiocGenerics,do.call)
-importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,plotPCA)
-importFrom(BiocGenerics,rowMeans)
-importFrom(BiocGenerics,rowSums)
-importFrom(BiocGenerics,sapply)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
@@ -131,16 +125,24 @@ importFrom(DESeq2,results)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedMatrixStats,colSums2)
 importFrom(DelayedMatrixStats,rowSums2)
+importFrom(IRanges,SplitDataFrameList)
+importFrom(IRanges,unsplit)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,as.matrix)
+importFrom(S4Vectors,cbind)
 importFrom(S4Vectors,complete.cases)
+importFrom(S4Vectors,do.call)
 importFrom(S4Vectors,head)
+importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,rowMeans)
+importFrom(S4Vectors,rowSums)
+importFrom(S4Vectors,sapply)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
@@ -190,6 +192,7 @@ importFrom(basejump,gene2symbol)
 importFrom(basejump,geometricMean)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,left_join)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
@@ -235,7 +238,6 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_vars)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
@@ -349,3 +351,4 @@ importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
 importMethodsFrom(basejump,coerce)
+importMethodsFrom(basejump,unsplit)
