--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,11 +188,10 @@ importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,decode)
 importFrom(basejump,estimateSizeFactors)
-importFrom(basejump,gene2symbol)
 importFrom(basejump,geometricMean)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
-importFrom(basejump,left_join)
+importFrom(basejump,leftJoin)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
@@ -351,4 +350,3 @@ importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
 importMethodsFrom(basejump,coerce)
-importMethodsFrom(basejump,unsplit)
