--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,sizeFactors)
+importFrom(BiocGenerics,table)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SerialParam)
