--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.4.2
-Date: 2019-08-23
+Date: 2019-09-03
 Authors@R: c(
     person(
         given = "Michael",
@@ -32,22 +32,22 @@ LazyData: false
 Depends:
     R (>= 3.6),
     SingleCellExperiment,
-    basejump (>= 0.11.11)
+    basejump (>= 0.11.12)
 Imports:
-    acidplots (>= 0.2.13),
-    bioverbs (>= 0.2.6),
+    acidplots (>= 0.2.14),
+    bioverbs (>= 0.2.7),
     goalie (>= 0.3.6),
     monocle3 (>= 0.1.3),
-    BiocGenerics,
-    BiocParallel,
-    DelayedArray,
-    DelayedMatrixStats,
+    BiocGenerics (>= 0.30),
+    BiocParallel (>= 1.18),
+    DelayedArray (>= 0.10),
+    DelayedMatrixStats (>= 1.6),
     DESeq2 (>= 1.22),
-    IRanges,
-    S4Vectors,
-    SummarizedExperiment,
+    IRanges (>= 2.18),
+    S4Vectors (>= 0.22),
+    SummarizedExperiment (>= 1.14),
     edgeR (>= 3.24),
-    scater,
+    scater (>= 1.12),
     Matrix (>= 1.2),
     Seurat (>= 3.1),
     cowplot (>= 0.9),
@@ -65,12 +65,12 @@ Imports:
 Suggests:
     acidroxygen (>= 0.1),
     acidtest (>= 0.2.4),
-    BiocStyle,
-    splatter,
-    knitr,
-    patrick,
-    roxygen2,
-    testthat
+    BiocStyle (>= 2.12),
+    splatter (>= 1.8),
+    knitr (>= 1.24),
+    patrick (>= 0.0.1),
+    roxygen2 (>= 6.1),
+    testthat (>= 2.2)
 Remotes:
     acidgenomics/acidplots,
     acidgenomics/acidroxygen,
