--- a/NAMESPACE
+++ b/NAMESPACE
@@ -282,6 +282,7 @@ importFrom(goalie,allAreNonNegative)
 importFrom(goalie,allArePositive)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areIntersectingSets)
+importFrom(goalie,areSetEqual)
 importFrom(goalie,assert)
 importFrom(goalie,bapply)
 importFrom(goalie,false)
