--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,as_tibble)
 importFrom(basejump,camelCase)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
@@ -341,7 +342,6 @@ importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
-importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,remove_rownames)
 importFrom(tibble,rownames_to_column)
