--- a/NAMESPACE
+++ b/NAMESPACE
@@ -279,6 +279,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_set)
 importFrom(goalie,allAreInLeftOpenRange)
+importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,allAreNonNegative)
 importFrom(goalie,allArePositive)
 importFrom(goalie,areDisjointSets)
