--- a/NAMESPACE
+++ b/NAMESPACE
@@ -261,6 +261,7 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_set)
+importFrom(ggplot2,vars)
 importFrom(goalie,allAreInLeftOpenRange)
 importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,allAreNonNegative)
