--- a/NAMESPACE
+++ b/NAMESPACE
@@ -206,7 +206,7 @@ importFrom(basejump,sampleNames)
 importFrom(basejump,separator)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snakeCase)
-importFrom(basejump,upperCamel)
+importFrom(basejump,uniteInterestingGroups)
 importFrom(bioverbs,cellCountsPerCluster)
 importFrom(bioverbs,cellTypesPerCluster)
 importFrom(bioverbs,clusters)
