--- a/NAMESPACE
+++ b/NAMESPACE
@@ -198,7 +198,9 @@ importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchInterestingGroups)
+importFrom(basejump,melt)
 importFrom(basejump,metrics)
+importFrom(basejump,mutateIf)
 importFrom(basejump,organism)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
