Fix NAMESPACE to work with bioc-devel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,8 @@ importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,plotPCA)
+importFrom(BiocGenerics,rowMeans)
+importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocGenerics,table)
 importFrom(BiocParallel,"bpprogressbar<-")
@@ -139,8 +141,6 @@ importFrom(S4Vectors,lapply)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
-importFrom(S4Vectors,rowMeans)
-importFrom(S4Vectors,rowSums)
 importFrom(S4Vectors,sapply)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
