--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.4.3
-Date: 2019-10-26
+Version: 0.4.4
+Date: 2019-10-30
 Authors@R: c(
     person(
         given = "Michael",
@@ -31,41 +31,41 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 3.6),
-    SingleCellExperiment,
+    SingleCellExperiment (>= 1.8),
     basejump (>= 0.11.20)
 Imports:
+    BiocGenerics (>= 0.32),
+    BiocParallel (>= 1.19),
+    DESeq2 (>= 1.26),
+    DelayedArray (>= 0.12),
+    DelayedMatrixStats (>= 1.8),
+    IRanges (>= 2.20),
+    Matrix (>= 1.2),
+    S4Vectors (>= 0.24),
+    Seurat (>= 3.1.1),
+    SummarizedExperiment (>= 1.16),
     acidplots (>= 0.2.16),
     bioverbs (>= 0.2.10),
+    cowplot (>= 1.0),
+    edgeR (>= 3.28),
+    ggplot2 (>= 3.2),
     goalie (>= 0.4.0),
     monocle3 (>= 0.2.0),
-    BiocGenerics (>= 0.30),
-    BiocParallel (>= 1.18),
-    DelayedArray (>= 0.10),
-    DelayedMatrixStats (>= 1.6),
-    DESeq2 (>= 1.24),
-    IRanges (>= 2.18.2),
-    S4Vectors (>= 0.22),
-    SummarizedExperiment (>= 1.14),
-    edgeR (>= 3.26),
-    scater (>= 1.12),
-    Matrix (>= 1.2),
-    Seurat (>= 3.1),
-    cowplot (>= 1.0),
-    ggplot2 (>= 3.2),
     rlang (>= 0.4),
+    scater (>= 1.14),
     sessioninfo (>= 1.1),
     methods,
     scales,
     stats,
     utils
 Suggests:
+    BiocStyle (>= 2.14),
     acidroxygen (>= 0.1.3),
     acidtest (>= 0.2.6),
-    BiocStyle (>= 2.12),
-    splatter (>= 1.8),
     knitr (>= 1.24),
     patrick (>= 0.0.1),
     roxygen2 (>= 6.1),
+    splatter (>= 1.10),
     testthat (>= 2.2)
 Remotes:
     acidgenomics/acidplots,
