--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ jobs:
   include:
     - stage: test
       name: "bioc-release"
-      script: image="singlecell" tag="bioc-release" ./.Rcheck/docker
+      script: image="acidgenomics/singlecell" tag="bioc-release" ./.Rcheck/docker
     - stage: test
       name: "bioc-devel"
-      script: image="singlecell" tag="bioc-devel" ./.Rcheck/docker
+      script: image="acidgenomics/singlecell" tag="bioc-devel" ./.Rcheck/docker
 
 matrix:
   allow_failures:
