Update internal scater dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -313,7 +313,7 @@ importFrom(rlang,sym)
 importFrom(scales,percent)
 importFrom(scales,pretty_breaks)
 importFrom(scater,calculateCPM)
-importFrom(scater,normalizeSCE)
+importFrom(scater,normalizeCounts)
 importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
