--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: general
+# https://docs.travis-ci.com/user/languages/minimal-and-generic/
+language: minimal
 
-# env:
-#   - RCHECK_SKIP_UPDATE=1
+# > env:
+# >   - RCHECK_SKIP_UPDATE=1
 
 services:
   - docker
