--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-# https://docs.travis-ci.com/user/languages/minimal-and-generic/
-language: minimal
-
 # > env:
 # >   - RCHECK_SKIP_UPDATE=1
+
+os: linux
+language: shell
 
 services:
   - docker
@@ -22,8 +22,6 @@ jobs:
     - stage: test
       name: "bioc-devel"
       script: image="acidgenomics/singlecell" tag="bioc-devel" ./.Rcheck/docker
-
-matrix:
   allow_failures:
     - name: "bioc-devel"
   fast_finish: true
