Rename bioverbs dependency to acidgenerics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,28 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(acidgenerics,cellCountsPerCluster)
+importFrom(acidgenerics,cellTypesPerCluster)
+importFrom(acidgenerics,clusters)
+importFrom(acidgenerics,cpm)
+importFrom(acidgenerics,diffExp)
+importFrom(acidgenerics,diffExpPerCluster)
+importFrom(acidgenerics,findMarkers)
+importFrom(acidgenerics,plotCellCountsPerCluster)
+importFrom(acidgenerics,plotCellTypesPerCluster)
+importFrom(acidgenerics,plotCounts)
+importFrom(acidgenerics,plotDot)
+importFrom(acidgenerics,plotDots)
+importFrom(acidgenerics,plotFeature)
+importFrom(acidgenerics,plotKnownMarkers)
+importFrom(acidgenerics,plotMarker)
+importFrom(acidgenerics,plotPCElbow)
+importFrom(acidgenerics,plotReducedDim)
+importFrom(acidgenerics,plotTSNE)
+importFrom(acidgenerics,plotTopMarkers)
+importFrom(acidgenerics,plotUMAP)
+importFrom(acidgenerics,plotViolin)
+importFrom(acidgenerics,topMarkers)
 importFrom(acidplots,acid_theme_dark)
 importFrom(acidplots,acid_theme_light)
 importFrom(basejump,"interestingGroups<-")
@@ -209,28 +231,6 @@ importFrom(basejump,separator)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snakeCase)
 importFrom(basejump,uniteInterestingGroups)
-importFrom(bioverbs,cellCountsPerCluster)
-importFrom(bioverbs,cellTypesPerCluster)
-importFrom(bioverbs,clusters)
-importFrom(bioverbs,cpm)
-importFrom(bioverbs,diffExp)
-importFrom(bioverbs,diffExpPerCluster)
-importFrom(bioverbs,findMarkers)
-importFrom(bioverbs,plotCellCountsPerCluster)
-importFrom(bioverbs,plotCellTypesPerCluster)
-importFrom(bioverbs,plotCounts)
-importFrom(bioverbs,plotDot)
-importFrom(bioverbs,plotDots)
-importFrom(bioverbs,plotFeature)
-importFrom(bioverbs,plotKnownMarkers)
-importFrom(bioverbs,plotMarker)
-importFrom(bioverbs,plotPCElbow)
-importFrom(bioverbs,plotReducedDim)
-importFrom(bioverbs,plotTSNE)
-importFrom(bioverbs,plotTopMarkers)
-importFrom(bioverbs,plotUMAP)
-importFrom(bioverbs,plotViolin)
-importFrom(bioverbs,topMarkers)
 importFrom(cowplot,plot_grid)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
