--- a/NAMESPACE
+++ b/NAMESPACE
@@ -231,6 +231,10 @@ importFrom(basejump,separator)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snakeCase)
 importFrom(basejump,uniteInterestingGroups)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_ul)
 importFrom(cowplot,plot_grid)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
