--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,10 @@ importFrom(basejump,uniteInterestingGroups)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_div)
+importFrom(cli,cli_end)
+importFrom(cli,cli_h1)
+importFrom(cli,cli_h2)
 importFrom(cli,cli_ul)
 importFrom(cowplot,plot_grid)
 importFrom(edgeR,DGEList)
