--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ URL:
     https://pointillism.acidgenomics.com/,
     https://github.com/acidgenomics/pointillism/
 BugReports: https://github.com/acidgenomics/pointillism/issues/
-License: MIT + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: false
 Depends:
