Migrate pseudobulk to pointillism

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
 export(plotViolin)
+export(pseudobulk)
 export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeMarkers)
@@ -91,6 +92,7 @@ exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
 exportMethods(plotUMAP)
 exportMethods(plotViolin)
+exportMethods(pseudobulk)
 exportMethods(reducedDim)
 exportMethods(reducedDimNames)
 exportMethods(reducedDims)
@@ -194,6 +196,7 @@ importFrom(acidgenerics,plotTSNE)
 importFrom(acidgenerics,plotTopMarkers)
 importFrom(acidgenerics,plotUMAP)
 importFrom(acidgenerics,plotViolin)
+importFrom(acidgenerics,pseudobulk)
 importFrom(acidgenerics,topMarkers)
 importFrom(acidplots,acid_theme_dark)
 importFrom(acidplots,acid_theme_light)
