--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(plotUMAP)
 export(plotViolin)
 export(pseudobulk)
 export(readCellTypeMarkers)
+export(runSeurat)
 export(runZinbwave)
 export(sanitizeMarkers)
 export(summary)
