--- a/NAMESPACE
+++ b/NAMESPACE
@@ -238,6 +238,7 @@ importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_div)
+importFrom(cli,cli_dl)
 importFrom(cli,cli_end)
 importFrom(cli,cli_h1)
 importFrom(cli,cli_h2)
