Add success message

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -236,6 +236,7 @@ importFrom(basejump,snakeCase)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_div)
 importFrom(cli,cli_dl)
