Convert to S4 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ exportMethods(reducedDimNames)
 exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
+exportMethods(runSeurat)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
