Rework ggplot label handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ importFrom(acidgenerics,plotViolin)
 importFrom(acidgenerics,topMarkers)
 importFrom(acidplots,acid_theme_dark)
 importFrom(acidplots,acid_theme_light)
+importFrom(acidplots,matchLabels)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
