--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,12 +1,14 @@
 ^.*\.Rproj$
-^[-._a-zA-Z0-9]+\.(R|gz|html|pdf|png|sh|tar|txt|xz|yaml|yml|zip)$
+^CONTRIBUTING\.md$
+^LICENSE$
+^Meta$
+^[-._a-zA-Z0-9]+\.(R|Rcheck|Rproj|gz|html|pdf|png|sh|tar|txt|xz|yaml|yml|zip)$
 ^[._][-._a-zA-Z0-9]+$
 ^\.Rproj\.user$
-^CONTRIBUTING\.md$
-^data/cell_data_set.rda$
+^cran-comments\.md$
 ^data-raw$
+^data/cell_data_set\.rda$
 ^doc(s)?$
-^Meta$
 ^pkgdown$
 ^tests$
 ^vignettes/\.$
