--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(basejump,geometricMean)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,leftJoin)
+importFrom(basejump,makeGene2SymbolFromEnsembl)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
