--- a/NAMESPACE
+++ b/NAMESPACE
@@ -333,6 +333,7 @@ importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(utils,capture.output)
+importFrom(utils,data)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
 importMethodsFrom(basejump,coerce)
