--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(plotTopMarkers)
 export(plotUMAP)
 export(plotViolin)
 export(runSeurat)
+export(runZinbwave)
 export(summary)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
@@ -92,6 +93,7 @@ exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
 exportMethods(runSeurat)
+exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
