Simplify `runZinbwave` return

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -236,6 +236,7 @@ importFrom(cli,cli_dl)
 importFrom(cli,cli_end)
 importFrom(cli,cli_h1)
 importFrom(cli,cli_h2)
+importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(cowplot,plot_grid)
 importFrom(edgeR,DGEList)
