--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ jobs:
       name: "bioc-release"
       script: image="acidgenomics/singlecell" tag="bioc-release" ./.Rcheck/docker
     - stage: test
+      name: "bioc-oldrel"
+      script: image="acidgenomics/singlecell" tag="bioc-oldrel" ./.Rcheck/docker
+    - stage: test
       name: "bioc-devel"
       script: image="acidgenomics/singlecell" tag="bioc-devel" ./.Rcheck/docker
   allow_failures:
