--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,13 @@ jobs:
   include:
     - stage: test
       name: "bioc-release"
-      script: image="acidgenomics/singlecell" tag="bioc-release" ./.Rcheck/docker
+      script: image="acidgenomics/r-singlecell" tag="bioc-release" ./.Rcheck/docker
     - stage: test
       name: "bioc-oldrel"
-      script: image="acidgenomics/singlecell" tag="bioc-oldrel" ./.Rcheck/docker
+      script: image="acidgenomics/r-singlecell" tag="bioc-oldrel" ./.Rcheck/docker
     - stage: test
       name: "bioc-devel"
-      script: image="acidgenomics/singlecell" tag="bioc-devel" ./.Rcheck/docker
+      script: image="acidgenomics/r-singlecell" tag="bioc-devel" ./.Rcheck/docker
   allow_failures:
     - name: "bioc-devel"
   fast_finish: true
