--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 init:
   ps: |
         $ErrorActionPreference = "Stop"
-        Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
+        Invoke-WebRequest http://raw.github.com/acidgenomics/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
 
 install:
@@ -21,15 +21,16 @@ environment:
     R_ARCH: x64
     USE_RTOOLS: true
   matrix:
-    - configuration: 3.5
-      R_VERSION: 3.5.3
-    - configuration: 3.6
-      R_VERSION: 3.6.0
+    - configuration: release
+      R_VERSION: release
+    - configuration: oldrel
+      R_VERSION: oldrel
 
 matrix:
   fast_finish: true
 
 build_script:
+  - travis-tool.sh install_bioc GenomeInfoDbData
   - travis-tool.sh install_bioc_deps
 
 test_script:
