--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.4.9
-Date: 2020-02-21
+Version: 0.4.10
+Date: 2020-05-20
 Authors@R: c(
     person(
         given = "Michael",
@@ -32,7 +32,7 @@ LazyData: false
 Depends:
     R (>= 3.6),
     SingleCellExperiment (>= 1.8),
-    basejump (>= 0.12.2)
+    basejump (>= 0.12.7)
 Imports:
     BiocGenerics (>= 0.32),
     BiocParallel (>= 1.20),
@@ -45,12 +45,12 @@ Imports:
     Seurat (>= 3.1.1),
     SummarizedExperiment (>= 1.16),
     acidgenerics (>= 0.3.4),
-    acidplots (>= 0.2.23),
+    acidplots (>= 0.2.26),
     cli (>= 2.0),
     cowplot (>= 1.0),
     edgeR (>= 3.28),
     ggplot2 (>= 3.2),
-    goalie (>= 0.4.2),
+    goalie (>= 0.4.4),
     rlang (>= 0.4),
     scater (>= 1.14),
     sessioninfo (>= 1.1),
@@ -60,7 +60,7 @@ Imports:
     utils
 Suggests:
     BiocStyle (>= 2.14),
-    acidtest (>= 0.2.14),
+    acidtest (>= 0.3.0),
     future (>= 1.16),
     knitr (>= 1.24),
     patrick (>= 0.0.1),
@@ -71,6 +71,7 @@ Suggests:
     zinbwave (>= 1.8)
 Remotes:
     acidgenomics/acidgenerics,
+    acidgenomics/acidgsea,
     acidgenomics/acidplots,
     acidgenomics/acidtest,
     acidgenomics/basejump,
