Add support for RankedList generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(CellCycleMarkers)
 export(CellTypeMarkers)
 export(KnownMarkers)
+export(RankedList)
 export(SeuratMarkers)
 export(SeuratMarkersPerCluster)
 export(cellCountsPerCluster)
@@ -47,6 +48,7 @@ exportMethods("rowRanges<-")
 exportMethods("sampleData<-")
 exportMethods(Gene2Symbol)
 exportMethods(KnownMarkers)
+exportMethods(RankedList)
 exportMethods(SeuratMarkers)
 exportMethods(SeuratMarkersPerCluster)
 exportMethods(assay)
@@ -101,6 +103,8 @@ exportMethods(summary)
 exportMethods(topMarkers)
 importClassesFrom(Seurat,Seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importClassesFrom(acidgsea,FGSEAList)
+importClassesFrom(acidgsea,RankedList)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,counts)
@@ -193,6 +197,7 @@ importFrom(acidgenerics,plotTopMarkers)
 importFrom(acidgenerics,plotUMAP)
 importFrom(acidgenerics,plotViolin)
 importFrom(acidgenerics,topMarkers)
+importFrom(acidgsea,RankedList)
 importFrom(acidplots,acid_theme_dark)
 importFrom(acidplots,acid_theme_light)
 importFrom(acidplots,matchLabels)
