--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.4.10
-Date: 2020-05-20
+Date: 2020-05-21
 Authors@R: c(
     person(
         given = "Michael",
@@ -45,6 +45,7 @@ Imports:
     Seurat (>= 3.1.1),
     SummarizedExperiment (>= 1.16),
     acidgenerics (>= 0.3.4),
+    acidgsea (>= 0.3.0),
     acidplots (>= 0.2.26),
     cli (>= 2.0),
     cowplot (>= 1.0),
